
syntax = "proto3";

package ex5routeguide;
option csharp_namespace = "WFormsEx5BidirectionalStreamingRpc";

service RouteGuide {

  // Bidirectional streaming RPC.
  // Accepts a stream of RouteNotes sent while a route is being traversed,
  // while receiving other RouteNotes (e.g. from other users).
  rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}

}

// Points are represented as latitude-longitude pairs
message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

// A RouteNote is a message sent while at a given point.
message RouteNote {
  // The location from which the message is sent.
  Point location = 1;
  // The message to be sent.
  string message = 2;
}
